--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ form input, form textarea{
     background: #262626;
     padding: 15px;
     margin: 15px 0;
-    font-size: 10px;
+    font-size: 18px;
     color: #fff;
     border-radius: 6px;
 }
@@ -241,7 +241,7 @@ form btn2{
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
-    cursor: pointer
+    cursor: pointer;
 }
 .copyright{
     width: 100%;
@@ -250,6 +250,9 @@ form btn2{
     background:#262626;
     font-weight: 300;
     margin-top: 20px;
+}
+.btn.btn2:active{
+    color: black;
 }
 
 /* css for small screens */
